added code to make canvas non-draggable

--- a/style.css
+++ b/style.css
@@ -13,6 +13,13 @@ canvas {
     bottom: 0;
     left: 0;
     right: 0;
+    
+    /* -webkit-user-drag: none; 
+    -khtml-user-drag: none; 
+    -moz-user-drag: none; 
+    -o-user-drag: none; 
+    -user-drag: none;  */
+    
 }
 
 button {
