--- a/menu.css
+++ b/menu.css
@@ -20,8 +20,8 @@ h1, p {
 
 .options {
     display : grid;
-    grid-template-columns: auto auto;
-    text-align : center;
+    grid-template-columns: 150px 150px 150px 150px;
+    justify-content : center;
 }
 
 button {
