--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+body {
+    font-family : "Pangolin";
+}
+
 canvas {
     border: 3px solid black;
     padding-left: 0;
     padding-right: 0;
-    margin-left: auto;
+    margin-left: 500px;
     margin-right: auto;
     display: block;
     padding: 0;
-    margin: auto;
+    /* margin: auto; */
     display: block;
     position: absolute;
     top: 0;
@@ -35,9 +39,9 @@ p {
     display : grid;
     grid-column : 1;
     margin : 10px;
-    width : 180px;
+    width : 425px;
     height : 30px;
-    font-size : 20px;
+    font-size : 18px;
 }
 
 .colorBtn:active {
@@ -53,4 +57,16 @@ h1 {
     color : white;
 }
 
+.container {
+    display : grid;
+    grid-template-columns: 200px 200px;
+}
 
+.directions {
+    background-color: rgb(228, 178, 161);
+    width : 425px;
+}
+
+.direct, .currentColor {
+    white-space: nowrap;
+}
