Changed column count to 5

--- a/styleSheets/menu.css
+++ b/styleSheets/menu.css
@@ -21,7 +21,7 @@ h1, p {
 
 .options {
     display : grid;
-    grid-template-columns: 150px 150px 150px;
+    grid-template-columns: 150px 150px 150px 150px 150px;
     grid-template-rows: 150px 150px 150px 150px;
     justify-content : center;
 }
